--- a/recipes-app/src/index.css
+++ b/recipes-app/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(255, 255, 255, 0.87); /* Texto predeterminado en modo oscuro */
+  background-color: #242424; /* Fondo predeterminado en modo oscuro */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,18 +16,18 @@
 a {
   font-weight: 500;
   color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none; /* Mantener enlaces sin subrayado */
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: inherit; /* Usa el fondo del :root */
 }
 
 h1 {
@@ -46,9 +46,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -56,12 +58,14 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #213547; /* Texto predeterminado en modo claro */
+    background-color: #ffffff; /* Fondo predeterminado en modo claro */
   }
+  
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
