--- a/recipes-app/src/index.css
+++ b/recipes-app/src/index.css
@@ -10,7 +10,7 @@
 
   color-scheme: light; /* Cambia a 'light' para modo claro */
   color: #213547; /* Texto predeterminado en modo claro */
-  background-color: #ffffff; /* Fondo predeterminado en modo claro */
+  background-color: #f0e6d5; /* Fondo predeterminado en modo claro */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
